# loopforge

./: .cz.toml  .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py  script.py.mako
docs/: ARCHITECTURE_EVOLUTION_PLAN.md  CHARACTER_BIBLE.md  CINEMATIC_DEBUGGER.md  JUNIE_SYSTEM_PROMPT.md  LOOPFORGE_AGENT_PROMPT.md  NOTES_FROM_PREVIOUS_ARCHITECTS.md  PRODUCER_VISION.md  STATELOG.md
loopforge/: __init__.py  agents.py  characters.py  config.py  daily_logs.py  day_runner.py  db.py  emotions.py  environment.py  episode_recaps.py  explainer.py  explainer_context.py  llm_client.py  llm_lens.py  llm_stub.py  logging_utils.py  memory_store.py  metrics.py  models.py  narrative.py  narrative_viewer.py  perception_shaping.py  reflection.py  reporting.py  simulation.py  supervisor.py  supervisor_bias.py  types.py  weave.py
scripts/: metrics.py  run_simulation.py
tests/: test_action_log_entry.py  test_compute_day_summary.py  test_config.py  test_daily_logs.py  test_day_runner.py  test_day_runner_with_supervisor.py  test_emotions.py  test_episode_metadata.py  test_episode_recaps.py  test_events.py  test_explainer.py  test_llm_client.py  test_llm_lens.py  test_llm_stub.py  test_llm_stub_policy_pipeline.py  test_memories.py  test_metrics_belief_drift.py  test_metrics_incidents.py  test_metrics_modes.py  test_metrics_segments.py  test_narrative.py  test_narrative_perception.py  test_narrative_viewer.py  test_narrative_viewer_trends.py  test_perception_shaping.py  (+14 more)
(+2 files in other folders)
